[package]
name = "audioman"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-core = "0.58"

[dependencies.windows]
version = "0.58"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_WinRT",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_Devices_FunctionDiscovery",
]

[profile.release]
lto = true
strip = true
codegen-units = 1
